--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,52 @@
+@import url("https://fonts.googleapis.com/css2?family=Cabin+Sketch:wght@700&family=Handlee&display=swap");
+#root {
+  max-width: 1700px;
+  margin: auto;
+}
 
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
+html::-webkit-scrollbar {
+  width: 0.5vw;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #333333;
+  border-radius: 100vw;
+}
+
+::-webkit-scrollbar-track {
+  background-color: #FCC108;
+}
+
+body {
+  font-family: "Handlee", cursive;
+  background-color: #333333;
+  overflow-x: hidden;
+  line-height: 1.5;
+  margin: auto;
+}
+
+a {
+  text-decoration: none;
+  cursor: pointer;
+  color: #fff;
+}
+
+ul {
+  list-style-type: none;
+}
+
+p {
+  font-size: 1.5rem;
+}
 
 /*# sourceMappingURL=index.css.map */
