--- a/src/styles/sass/utils/_variables.scss
+++ b/src/styles/sass/utils/_variables.scss
@@ -6,8 +6,9 @@ $website-height: 1400px;
 $content-max-width: 1700px;
 $header-height: 120px;
 $font-size-sm: 1rem;
-$font-size-md: 1.5rem;
+$font-size-md: 2rem;
 $font-size-lg: 3rem;
+$font-size-xxl: 4rem;
 $font-size-text: 1.5rem;
 $sketch-font: 'Cabin Sketch', cursive;
 $hand-font:'Handlee', cursive;
