--- a/src/index.css
+++ b/src/index.css
@@ -151,4 +151,20 @@ p {
   border-bottom-color: #FCC108;
 }
 
+.footer {
+  width: 100%;
+  display: flex;
+  place-content: center;
+  position: fixed;
+  bottom: 0;
+  max-width: 1700px;
+}
+.footer__text {
+  padding-bottom: 1rem;
+  color: #fff;
+  font-family: "Handlee", cursive;
+  font-weight: bold;
+  font-size: 1rem;
+}
+
 /*# sourceMappingURL=index.css.map */
