--- a/src/styles/sass/pages/_ingredientsChoose.scss
+++ b/src/styles/sass/pages/_ingredientsChoose.scss
@@ -5,40 +5,83 @@
    padding-inline: 2rem;
    height: 100%;
    min-height: 50rem;
-}
 
-.ingredientsChoose {
-   display: inherit;
-   flex-direction: column;
-   padding: 1.5rem;
 
-   &__title {
-      place-self: center;
-      font-family: $sketch-font;
-      font-size: $font-size-lg;
-      margin-bottom: 1rem;
-   }
-
-   &__form {
+   .ingredientsChoose {
       display: inherit;
       flex-direction: column;
-      min-height: 18rem;
-
-      &__label {
-         font-size: $font-size-md;
-         margin-bottom:.5rem ;
-      }
-   }
-
-   &__charm {
-      display: flex;
-      flex-direction: column;
-      place-items: center;
-      height: 20rem;
+      padding: 1.5rem;
+      margin-right: 1rem;
+      min-width: 35rem;
 
       &__title {
+         place-self: center;
          font-family: $sketch-font;
-         font-size: $font-size-md;
+         font-size: $font-size-lg;
+         margin-bottom: 1rem;
+      }
+
+      &__form {
+         display: inherit;
+         flex-direction: column;
+         min-height: 18rem;
+
+         &__label {
+            font-size: $font-size-md;
+            margin-bottom:.5rem ;
+         }
+      }
+
+      &__charm {
+         display: flex;
+         flex-direction: column;
+         place-items: center;
+         height: 20rem;
+
+         &__title {
+            font-family: $sketch-font;
+            font-size: $font-size-md;
+         }
       }
    }
+
+   .mealPrep {
+      display: inherit;
+      flex-direction: column;
+      padding: 1.5rem;
+      margin-left: 1rem;
+      width: 100%;
+
+
+      &__title {
+         place-self: center;
+         font-family: $sketch-font;
+         font-size: $font-size-lg;
+         margin-bottom: 1rem;
+      }  
+
+      &__wrapper {
+         display: inherit;
+         flex-direction: row;
+         height: 40rem;
+         justify-content: space-between;
+
+         &__table {
+            width: 100%;
+         }
+      }
+
+      &__charm {
+         display: flex;
+         flex-direction: column;
+         place-items: center;
+         place-self: center;
+
+         &__title {
+            font-family: $sketch-font;
+            font-size: $font-size-md;
+         }
+      }      
+   }
+
 }
