--- a/src/styles/sass/components/_ingredientInfo.scss
+++ b/src/styles/sass/components/_ingredientInfo.scss
@@ -7,3 +7,11 @@
 .badges__group {
    margin-top: 1.5rem;
 }
+
+@media (max-width: 500px) {
+   .badges__group {
+      margin-top: .5rem;
+      display: inherit;
+      flex-direction: column;
+   }
+}
