--- a/src/styles/sass/pages/_ingredientsChoose.scss
+++ b/src/styles/sass/pages/_ingredientsChoose.scss
@@ -81,6 +81,7 @@
          display: flex;
          flex-direction: column;
          place-items: center;
+         align-items: center;
          place-self: center;
          height: 100%;
 
