--- a/src/styles/sass/pages/_ingredientsList.scss
+++ b/src/styles/sass/pages/_ingredientsList.scss
@@ -4,6 +4,7 @@
    display: flex;
    flex-direction: column;
    place-items: center;
+   min-height: 50rem;
 
    &__title {
       font-family: $sketch-font;
