--- a/src/styles/sass/pages/_ingredientsList.scss
+++ b/src/styles/sass/pages/_ingredientsList.scss
@@ -8,7 +8,7 @@
 
    &__title {
       font-family: $sketch-font;
-      font-size: $font-size-lg;
+      font-size: $font-size-xxl;
    }
 
    &__box {
