--- a/src/styles/sass/utils/_utils.scss
+++ b/src/styles/sass/utils/_utils.scss
@@ -46,12 +46,22 @@
    background-color: $blue-clr;
 }
 
+.bg-green {
+   background-color: $green-clr;
+}
+
 .badge {
    margin-top: 2rem;
    margin-inline: .5rem;
    border-radius: $sketch-form;
    padding: .5rem;
-   
+   display: grid;
+   place-content: center;
+}
+
+.flex-wrap {
+   display: flex;
+   flex-wrap: wrap;
 }
 
 .table {
