--- a/src/styles/sass/utils/_utils.scss
+++ b/src/styles/sass/utils/_utils.scss
@@ -55,8 +55,7 @@
    margin-inline: .5rem;
    border-radius: $sketch-form;
    padding: .5rem;
-   display: grid;
-   place-content: center;
+
 }
 
 .flex-wrap {
@@ -93,5 +92,12 @@
          height: 2rem;
       }
    }
+
+   .badge {
+      display: grid;
+      place-content: center;
+   }
+
+
 }
 
