--- a/src/styles/sass/pages/_login.scss
+++ b/src/styles/sass/pages/_login.scss
@@ -1,22 +1,26 @@
 @use '../utils/variables' as *;
 
 .login {
-   display: grid;
-   place-content: center;
+   display: flex;
    min-height: 100vh;
+   flex-direction: column;
+   place-items: center;
+   gap: 2rem;
 
    &__title {
-      position: absolute;
-      top: 0;
+      margin-top: 3rem;
       font-family: $sketch-font;
       font-size: $font-size-xxl;
-      place-self: center;
+      height: fit-content;
+      width: fit-content;
    }
 
    &__box {
       border: 3px $yellow-clr solid;
       border-radius: $sketch-card;
       padding: 2rem;
+      max-width: 20rem;
+      max-height: 30rem;
    }
 
    &__form {
